# try-make-phrases

./: .gitignore  README.md  check_phrases.py  google-10000-english.txt  manual_phrase.py  pyproject.toml  recalculate_scores.py  test_no_throttle.db  test_phrases.db-shm  test_phrases.db-wal  test_ranking.db-shm  test_ranking.db-wal
config/: scrabble_values.py  settings.py
data/: phrases.db
src/phrase_generator/: __init__.py  llm_client.py  main.py  phrase_ranker.py  phrase_validator.py  scorer.py  tile_parser.py  word_dictionary.py
storage/: database.py  models.py
