[project]
name = "scrabble-phrase-generator"
version = "0.1.0"
description = "Local LLM-powered Scrabble phrase generator optimizing for winter themes"
requires-python = ">=3.11"
authors = [
    { name = "Rob Parrett" }
]
dependencies = [
    "ollama>=0.2.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phrase_generator", "storage", "config"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.scripts]
generate-phrases = "phrase_generator.main:app"
